# RAJA-examples

./: CMakeLists.txt
Kripke-v1.1/Kripke-v1.1-RAJA/: CMakeLists.txt
Kripke-v1.1/Kripke-v1.1-RAJA/Kripke/: CMakeLists.txt
lcals-v1.0.2/: LCALS_rules.mk  Makefile  main.cxx
